// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile 1`] = `
<div
  className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_left-side class-name"
>
  <div
    className="mfui-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
    <div
      className="mfui-benefits-icons-tile__content"
    >
      text
    </div>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile with react node in text field 1`] = `
<div
  className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_left-side class-name"
>
  <div
    className="mfui-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
    <div
      className="mfui-benefits-icons-tile__content"
    >
      <div
        key="test"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile without text 1`] = `
<div
  className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_left-side class-name"
>
  <div
    className="mfui-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile without title 1`] = `
<div
  className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_left-side class-name"
>
  <div
    className="mfui-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-benefits-icons-tile__content-wrapper"
  >
    <div
      className="mfui-benefits-icons-tile__content"
    >
      text
    </div>
  </div>
</div>
`;
